# agent-over-protocol

./: .dockerignore  .gitignore  AGENTS.md  Containerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.agents/memory/: a2a-server.md  async-io.md  code-quality.md  deployment.md  project-direction.md  project-skills.md
.agents/skills/aop-a2a-server/: SKILL.md
.agents/skills/aop-a2a-server/agents/: openai.yaml
.agents/skills/aop-deployment/: SKILL.md
.agents/skills/aop-deployment/agents/: openai.yaml
src/agent_over_protocol/: __init__.py  agent_card.py  context.py  conversation.py  documents.py  executor.py  llm.py  profiles.py  server.py  settings.py  tools.py  web.py  workspace.py
tests/: .env.template  __init__.py  test_server.py  test_web.py  test_workspace.py
